--- a/client/src/components/shared/header/Header.css
+++ b/client/src/components/shared/header/Header.css
@@ -5,11 +5,11 @@
   left: 0;
   right: 0;
   height: 50px;
-  background-color: beige;
+  background-color: #49868c;
   justify-content: space-between;
   align-items: center;
   padding: 0 10px;
-  box-shadow: 1px 2px 3px rgba(0,0,0, 0.3);
+  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.3);
 }
 
 .profile-image {
