--- a/client/src/components/loginPage/LoginPage.css
+++ b/client/src/components/loginPage/LoginPage.css
@@ -52,3 +52,17 @@
   margin-top: -50px;
   font-size: 20px;
 }
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+label {
+  padding: 4px;
+}
+
+input {
+  margin: 4px;
+  border-radius: ;
+}
