Nice changes for matchy

--- a/client/src/components/homePage/HomePage.css
+++ b/client/src/components/homePage/HomePage.css
@@ -1,5 +1,5 @@
 .homepage-header {
-  color: #ffffff;
+  color: var(--white);
   font-size: 100px;
   text-decoration: underline;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
