--- a/client/src/components/loginPage/LoginPage.css
+++ b/client/src/components/loginPage/LoginPage.css
@@ -24,6 +24,9 @@
   font-size: 20px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
+  cursor: pointer;
+  display: flex;
+  flex-direction: row;
 }
 
 .login-button {
