--- a/client/src/components/profilePage/ProfilePage.css
+++ b/client/src/components/profilePage/ProfilePage.css
@@ -1,4 +1,4 @@
-.login-main-container {
+.profilepage-main-container {
   height: 50rem;
   display: flex;
   flex-direction: column;
@@ -6,7 +6,7 @@
   align-items: center;
 }
 
-.login-popup-container {
+.profilepage-popup-container {
   height: 30rem;
   width: 450px;
   border: none;
@@ -19,14 +19,14 @@
   justify-content: center;
 }
 
-.login-headers {
+.profilepage-headers {
   color: #6a8e96;
   font-size: 20px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
 }
 
-.login-button {
+.profilepage-button {
   height: 50px;
   padding: 14px 32px;
   border-radius: 2em;
@@ -39,7 +39,7 @@
   font-weight: bold;
 }
 
-.login-button:hover {
+.profilepage-button:hover {
   background-color: rgb(236, 234, 234);
   color: rgb(80, 70, 69);
   box-shadow: 1px 2px 3px rgb(99, 115, 124);
