--- a/client/src/components/searchPage/SearchPage.css
+++ b/client/src/components/searchPage/SearchPage.css
@@ -22,6 +22,8 @@
 p {
   font-family: "Courier New", Courier, monospace;
   color: rgb(119, 105, 103);
+  font-weight: bold;
+  font-size: 12px;
 }
 .searchpage-content-container {
   display: flex;
