--- a/client/src/theme.css
+++ b/client/src/theme.css
@@ -25,10 +25,50 @@ button {
   color: rgb(119, 105, 103);
   font-family: "Courier New", Courier, monospace;
   font-weight: bold;
+  outline: none;
 }
 
 button:hover {
   background-color: rgb(236, 234, 234);
   color: rgb(80, 70, 69);
   box-shadow: 1px 2px 3px rgb(99, 115, 124);
+}
+
+button:focus {
+  outline: 0;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+label {
+  padding: 4px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  color: rgb(90, 90, 90);
+}
+
+input {
+  margin: 4px;
+  border-radius: 5px;
+  border: 2px solid rgb(192, 191, 191);
+  box-shadow: 1px 2px 3px rgb(236, 234, 234);
+  background-color: rgb(250, 249, 249);
+  padding: 7px;
+  margin: 7px 0px;
+  width: 100%;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+}
+input:hover {
+  outline: 10px;
+  cursor: pointer;
+}
+input:focus {
+  outline: none;
+  border: 2px solid rgb(133, 133, 133);
+  box-shadow: 1px 2px 3px rgb(190, 190, 190);
+  background-color: rgb(250, 249, 249);
 }
