--- a/client/src/components/profilePage/ProfilePage.css
+++ b/client/src/components/profilePage/ProfilePage.css
@@ -7,7 +7,7 @@
 }
 
 .profilepage-popup-container {
-  height: 30rem;
+  height: 40rem;
   width: 450px;
   border: none;
   box-shadow: 1px 2px 3px rgb(131, 153, 166);
@@ -21,14 +21,18 @@
 
 .profilepage-headers {
   color: #6a8e96;
-  font-size: 20px;
+  font-size: 14px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
+  cursor: pointer;
+  display: flex;
+  flex-direction: row;
 }
 
 .profilepage-button {
   height: 50px;
   padding: 14px 32px;
+  margin: 20px 0px;
   border-radius: 2em;
   transition: all 0.2s;
   border: none;
@@ -37,18 +41,11 @@
   color: rgb(119, 105, 103);
   font-family: "Courier New", Courier, monospace;
   font-weight: bold;
+  outline: none;
 }
 
 .profilepage-button:hover {
   background-color: rgb(236, 234, 234);
   color: rgb(80, 70, 69);
   box-shadow: 1px 2px 3px rgb(99, 115, 124);
-}
-
-.homepage-hearts {
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  margin-top: -50px;
-  font-size: 20px;
 }
