--- a/client/src/components/profilePage/ProfilePage.css
+++ b/client/src/components/profilePage/ProfilePage.css
@@ -66,23 +66,14 @@ p {
   justify-content: center;
   flex-direction: column;
 }
-.profilepage-fileselecthandler label {
-  background: linear-gradient(40deg, #ff6ec4, #7873f5);
-}
-.profilepage-fileselecthandler::-webkit-file-upload-button {
-  visibility: hidden;
-}
-.profilepage-fileselecthandler::-webkit-input-placeholder {
-  visibility: hidden;
-}
-.profilepage-fileselecthandler::before {
-  content: "select profile photo";
-  display: inline-block;
-  outline: none;
-  white-space: nowrap;
-  border: none;
-  background-color: none;
-  -webkit-user-select: none;
+
+.btn-select-photo {
+  width: 200px;
+  height: 200px;
+  border-radius: 100%;
   cursor: pointer;
-  overflow: hidden;
+  margin-bottom: "20px";
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
