--- a/client/src/theme.css
+++ b/client/src/theme.css
@@ -48,19 +48,19 @@ label {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   color: rgb(90, 90, 90);
+  justify-self: flex-start;
 }
 
 input {
-  margin: 4px;
-  border-radius: 5px;
-  border: 2px solid rgb(192, 191, 191);
+  border-radius: 3px;
+  border: 1px solid rgb(192, 191, 191);
   box-shadow: 1px 2px 3px rgb(236, 234, 234);
-  background-color: rgb(250, 249, 249);
-  padding: 7px;
-  margin: 7px 0px;
-  width: 100%;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  padding: 20px 30px;
+  box-sizing: border-box;
+  background: white;
+  padding: 13px;
+  margin: 3px;
+  width: 200px;
 }
 input:hover {
   outline: 10px;
@@ -68,7 +68,5 @@ input:hover {
 }
 input:focus {
   outline: none;
-  border: 2px solid rgb(133, 133, 133);
-  box-shadow: 1px 2px 3px rgb(190, 190, 190);
-  background-color: rgb(250, 249, 249);
+  /* background-color: rgb(250, 249, 249); */
 }
