--- a/client/src/components/shared/header/Header.css
+++ b/client/src/components/shared/header/Header.css
@@ -19,6 +19,12 @@
   padding-left: 30px;
 }
 
+@media screen and (max-width: 550px) {
+  .buttons {
+    display: none;
+  }
+}
+
 .header-buttons {
   padding: 10px 20px;
   font-size: 15px;
