menu transition animation

--- a/client/src/components/homePage/HomePage.css
+++ b/client/src/components/homePage/HomePage.css
@@ -41,3 +41,15 @@
   margin-top: -50px;
   font-size: 20px;
 }
+
+@media screen and (max-width: 550px) {
+  .homepage-header {
+    font-size: 80px;
+  }
+  .homepage-main-container {
+    height: 45rem;
+  }
+  .homepage-hearts {
+    display: none;
+  }
+}
