--- a/client/src/components/hamburgerMenu/hamburgerToggler/HamburgerToggler.css
+++ b/client/src/components/hamburgerMenu/hamburgerToggler/HamburgerToggler.css
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 2;
 }
 
 .menu-wrap {
@@ -80,8 +81,46 @@
   transition: 0.8s ease;
 }
 
+.hamburger-toggler:checked + .menu-wrap > div:after {
+  background-color: black;
+  color: black;
+}
+
+.hamburger-toggler:checked ~ .menu-popup {
+  visibility: visible;
+  transform: scale(1);
+}
+
+.menu-popup {
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  visibility: hidden;
+  /* overflow: hidden; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  transform: scale(0);
+  transition: all 0.4s ease;
+  background-color: white;
+}
+
+.hamburger-links {
+  display: flex;
+  justify-content: space-around;
+  color: #6a8e96;
+  font-size: 50px;
+  text-decoration: none;
+  padding: 20px;
+  font-family: "Courier New", Courier, monospace;
+}
+
 @media screen and (min-width: 550px) {
   .btn-hamburger {
     display: none;
   }
-} ;
+}
