--- a/client/src/components/hamburgerMenuToggler/HamburgerToggler.css
+++ b/client/src/components/hamburgerMenuToggler/HamburgerToggler.css
@@ -2,13 +2,13 @@
   position: fixed;
   bottom: 10px;
   left: 10px;
-  /* height: 70px;
-  width: 70px; */
+
   padding: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 2;
+  z-index: 1;
+  background-color: white;
 }
 
 .menu-wrap {
@@ -93,13 +93,13 @@
 
 .menu-popup {
   position: fixed;
-  z-index: 1;
+  z-index: -1;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   visibility: hidden;
-  /* overflow: hidden; */
+  overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -113,10 +113,18 @@
   display: flex;
   justify-content: space-around;
   color: #6a8e96;
-  font-size: 50px;
+  font-size: 40px;
   text-decoration: none;
-  padding: 20px;
+  background-color: bisque;
+  box-shadow: 1px 2px 3px grey;
+  margin: 20px;
+  padding: 10px;
   font-family: "Courier New", Courier, monospace;
+}
+
+.hamburger-links:hover {
+  font-size: 45px;
+  padding-left: 15px;
 }
 
 @media screen and (min-width: 550px) {
