fixes responsive issues

--- a/client/src/components/loginPage/LoginPage.css
+++ b/client/src/components/loginPage/LoginPage.css
@@ -49,3 +49,11 @@
   color: rgb(80, 70, 69);
   box-shadow: 1px 2px 3px rgb(99, 115, 124);
 }
+
+@media screen and (max-width: 550px) {
+  .login-popup-container {
+    width: fit-content;
+    height: fit-content;
+    padding: 40px;
+  }
+}
