--- a/client/src/components/hamburgerMenu/HamburgerMenu.css
+++ b/client/src/components/hamburgerMenu/HamburgerMenu.css
@@ -1,16 +1,46 @@
+.mobile-menu-wrap {
+  background-color: #fff;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-content: space-around;
+  flex-direction: column;
+}
+
+.hamburger-links {
+  display: flex;
+  justify-content: space-around;
+  color: #6a8e96;
+  font-size: 40px;
+  text-decoration: none;
+  background-color: bisque;
+  box-shadow: 1px 2px 3px grey;
+  margin: 20px;
+  padding: 10px;
+  font-family: "Courier New", Courier, monospace;
+}
+
 .btn-hamburger {
   position: fixed;
   bottom: 10px;
   left: 10px;
-
-  padding: 40px;
+  padding: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 1;
-  background-color: white;
 }
-
+.ham-line {
+  font-size: 30px;
+}
+.ham-cross {
+  font-size: 40px;
+  color: red;
+}
+/* 
 .menu-wrap {
   position: fixed;
   z-index: 1;
@@ -19,8 +49,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
+} */
+/* 
 .hamburger-toggler {
   position: absolute;
   z-index: 2;
@@ -29,8 +59,8 @@
   display: flex;
   display: flex;
   align-items: center;
-}
-
+} */
+/* 
 .hamburger {
   position: absolute;
   z-index: 1;
@@ -39,8 +69,8 @@
   display: flex;
   align-items: center;
   transition: all 0.6s ease;
-}
-
+} */
+/* 
 .hamburger > div {
   position: relative;
   background-color: #6a8e96;
@@ -59,8 +89,8 @@
   background-color: #6a8e96;
   width: 100%;
   height: 3px;
-}
-
+} */
+/* 
 .hamburger > div:before {
   top: -15px;
 }
@@ -109,23 +139,10 @@
   background-color: white;
 }
 
-.hamburger-links {
-  display: flex;
-  justify-content: space-around;
-  color: #6a8e96;
-  font-size: 40px;
-  text-decoration: none;
-  background-color: bisque;
-  box-shadow: 1px 2px 3px grey;
-  margin: 20px;
-  padding: 10px;
-  font-family: "Courier New", Courier, monospace;
-}
-
 .hamburger-links:hover {
   font-size: 45px;
   padding-left: 15px;
-}
+} */
 
 @media screen and (min-width: 550px) {
   .btn-hamburger {
